feat: add TypeScript SDK test suite
18 tests covering all client methods:
- Constructor (baseUrl normalization, defaults)
- Request headers (X-Wallet, Content-Type)
- store, storeBatch, recall, list, update, delete, ingest, suggested
- Error handling (404, 422, 429, non-JSON responses)

Uses mock fetch for isolated unit testing with no network calls.

--- a/typescript/package.json
+++ b/typescript/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
+    "test": "bun test",
     "prepublishOnly": "bun run build"
   },
   "keywords": ["memoclaw", "memory", "ai", "sdk", "semantic-search"],
