fix: install dev extras (not test) for pytest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         working-directory: python
         run: |
-          pip install -e ".[test]"
+          pip install -e ".[dev]"
 
       - name: Run tests
         working-directory: python
