--- a/typescript/package.json
+++ b/typescript/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
+    "test": "vitest run",
     "prepublishOnly": "bun run build"
   },
   "keywords": [
