--- a/typescript/package.json
+++ b/typescript/package.json
@@ -20,6 +20,7 @@
     "build": "tsc",
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
+    "test": "vitest run",
     "prepublishOnly": "bun run build"
   },
   "keywords": [
