feat: config file auto-loading + migrate() + bug fixes
- Auto-detect ~/.memoclaw/config.json (from `memoclaw init`) in both SDKs
  - Python: MemoClaw() now resolves private_key and base_url from
    explicit arg > env var > config file, with clear error messages
  - TypeScript: MemoClawClient() resolves wallet and baseUrl similarly
  - Both support custom configPath override

- Add migrate() method to both SDKs (POST /v1/migrate)
  - Bulk import markdown memory files
  - Python also has migrate_directory() convenience method
  - Full type definitions (MigrateResult / MigrateResponse)

- Bug fixes:
  - TS builders.ts: missing '(' in if statement (syntax error)
  - TS builders.ts: tags placed at wrong level in StoreRequest (should be inside metadata)
  - TS types.ts: RecallRequest.filters missing memory_type field
  - TS client.ts: removed duplicate error class definitions (now properly imports from errors.ts)
  - TS client.test.ts: fixed test expecting non-existent 'suggestion' property

- DX improvements:
  - wallet is now optional in TS MemoClawOptions (resolved from env/config)
  - base_url is now optional in Python (was required positional default)
  - Better error messages guiding users to run `memoclaw init`
  - Added @types/node for proper Node.js type support

--- a/typescript/package.json
+++ b/typescript/package.json
@@ -20,7 +20,6 @@
     "build": "tsc",
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
-    "test": "vitest run",
     "prepublishOnly": "bun run build"
   },
   "keywords": [
@@ -41,6 +40,7 @@
     "typescript": "^5"
   },
   "devDependencies": {
+    "@types/node": "^25.2.3",
     "typescript": "^5",
     "vitest": "^4.0.18"
   }
