--- a/typescript/package.json
+++ b/typescript/package.json
@@ -43,5 +43,8 @@
     "@types/node": "^25.2.3",
     "typescript": "^5",
     "vitest": "^4.0.18"
+  },
+  "dependencies": {
+    "viem": "^2.46.1"
   }
 }
