--- a/.github/workflows/publish-python.yml
+++ b/.github/workflows/publish-python.yml
@@ -9,7 +9,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: namespace-profile-default
     steps:
       - uses: actions/checkout@v4
 
@@ -31,7 +31,7 @@ jobs:
 
   publish:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: namespace-profile-default
     environment: pypi
     permissions:
       id-token: write
